5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1649_2704.log
== TEST (2019-04-09 19:29:35) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem==S):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
else(mensagem==N):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- ERROR:
File "XXXX", line 7
    else(mensagem==N):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:30:15) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem==S):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
if(mensagem==N):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(mensagem==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:30:17) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem==S):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
if(mensagem==N):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- EXECUTION TIME:
0.162129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 4, in <module>
    if(mensagem==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:30:18) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem==S):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
if(mensagem==N):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(mensagem==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:30:19) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem==S):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
if(mensagem==N):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- EXECUTION TIME:
0.158377
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 4, in <module>
    if(mensagem==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:30:46) 
-- CODE:
nota_do_aluno= float(input("digite a nota:"))
mensagem= input("digite S ou N : ")
mensagem= mensagem.upper()
if(mensagem=="S"):
	nota_do_aluno = nota_do_aluno+(nota_do_aluno*10/100)
	print(nota_do_aluno)
if(mensagem=="N"):
	nota_do_aluno = nota_do_aluno
	print(nota_do_aluno)
	
-- EXECUTION TIME:
0.284756
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
